--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,9 +3,10 @@
   "robotLength": 0.9,
   "holonomicMode": true,
   "pathFolders": [
-    "right start",
+    "UNCA",
     "left start",
-    "mid start"
+    "mid start",
+    "right start"
   ],
   "autoFolders": [],
   "defaultMaxVel": 3.0,
