update pathplanner with speaker cmd

--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -8,7 +8,12 @@
     "mid start",
     "right start"
   ],
-  "autoFolders": [],
+  "autoFolders": [
+    "rightStarts",
+    "midStarts",
+    "leftStarts",
+    "other"
+  ],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 540.0,
