--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,14 @@ def includeDesktopSupport = true
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 5.
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
+    implementation name: 'swervelib-v4.2023.1.1'
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
 
